--- a/globePocket/package.json
+++ b/globePocket/package.json
@@ -10,10 +10,10 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@mdi/font": "7.4.47",
+    "@mdi/font": "^7.4.47",
+    "esbuild": "^0.25.0",
     "roboto-fontface": "*",
-    "vue": "^3.4.31",
-    "vuetify": "^3.6.14"
+    "vue": "^3.4.31"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -24,13 +24,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.30.0",
-    "sass": "1.77.8",
+    "sass": "^1.77.8",
     "sass-embedded": "^1.77.8",
+    "sass-loader": "^16.0.5",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.4.0",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vue-router": "^4.4.0"
+    "vite": "^6.2.0",
+    "vite-plugin-vuetify": "^2.1.0",
+    "vue-router": "^4.4.0",
+    "vuetify": "^3.7.14"
   }
 }
